<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvName"
                android:text="@string/bunpro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/status_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/slContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <RelativeLayout
                        android:id="@+id/cram"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/box_shadow">
                        <TextView
                            android:id="@+id/tvCram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cram"
                            android:textColor="@color/colorBlue"
                            android:textSize="17sp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/study"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/box_shadow">
                        <TextView
                            android:id="@+id/tvStudy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/study"
                            android:textColor="@color/colorBlue"
                            android:textSize="17sp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/llReview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/box_shadow"
                        android:padding="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tvReviews"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:text="@string/next_reviews"
                                android:textColor="@color/colorBlue"
                                android:layout_centerVertical="true"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="10dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:gravity="center_vertical"
                                android:layout_marginRight="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="end">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/now"
                                        android:textColor="@color/colorGrey"/>

                                    <TextView
                                        android:id="@+id/tvUpdateText"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/colorGrey"/>
                                </LinearLayout>

                                <com.github.ybq.android.spinkit.SpinKitView
                                    android:id="@+id/review_spin_kit"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    style="@style/SpinKitView.Small.FadingCircle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:SpinKit_Color="@android:color/white"/>
                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Within 1 Hour"
                                android:textSize="16sp"
                                android:textColor="@android:color/white"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"/>

                            <TextView
                                android:id="@+id/tvUpdate1Hour"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="+0"
                                android:textSize="16sp"
                                android:textColor="@color/colorGrey"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Within 24 Hour"
                                android:textSize="16sp"
                                android:textColor="@android:color/white"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"/>

                            <TextView
                                android:id="@+id/tvUpdate24Hours"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="+0"
                                android:textSize="16sp"
                                android:textColor="@color/colorGrey"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</LinearLayout>